# WeatherApp

./: CMakeLists.txt  README.md  main.cpp  pdf.docx  vcpkg_rf.txt
